# laboratorio-algoritmos1

./: README.md
Documentos Laboratorio 0/: Algo1Macros.tex
Ejercicios-Labo9/: main.cpp
Labo-3-files/template-alumnos/src/: CMakeLists.txt  generador.cpp  generador.h  main.cpp  src  vectores.cpp  vectores.h
Laboratorio-1/: CMakeLists.txt  main.cpp
Laboratorio-2/: CMakeLists.txt  main.cpp
Laboratorio-2/Ej5/: CMakeLists.txt  main.cpp
Laboratorio-2/Ej_4/: CMakeLists.txt  main.cpp
Laboratorio-2/Ej_6/: CMakeLists.txt  main.cpp
Laboratorio-2/Ej_7/: CMakeLists.txt  main.cpp
Laboratorio-2/Ej_8/: CMakeLists.txt  main.cpp
labo1/: ejercicio1.cpp
labo10/: CMakeLists.txt  auxiliares.cpp  auxiliares.h  ejercicios.cpp  ejercicios.h  main.cpp
labo10/Tests/: busquedaBinariaTEST.cpp  indicePicoTEST.cpp  jumpSearchTEST.cpp  puntoFijoTEST.cpp
